--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row">
             <article>
                 <h2 class="fun-for-family">De leukste dagen samen!</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor id doloremque accusamus quod. Repellat cupiditate unde aperiam, ex fugiat beatae fuga. Esse distinctio rerum expedita fuga libero adipisci quis!</p>
+                <p>Welkom op de website van developerland. Het leukste pretpark voor de hele familie!</p>
             </article>
             <article>
                 <h2 class="accessibility">Betaalbaar en toegankelijk</h2>
@@ -40,7 +40,7 @@
             </div>
             <article class="emphasize">
                 <h2>Koop nu je tickets</h2>
-                <p>Koop hier ju tickets, klik op de knpo hieronder om je ticket te bestellen.</p>
+                <p>Koop hier je tickets, klik op de knop hieronder om je ticket te bestellen.</p>
                 <p>
                     <button>Bestel nu de tickets (&euro; 1500)</button>
                 </p>
