--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </article>
             <article>
                 <h2 class="accessibility">Betaalbaar en toegankelijk</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor id doloremque accusamus quod. Repellat cupiditate unde aperiam, ex fugiat beatae fuga. Esse distinctio rerum expedita fuga libero adipisci quis!</p>
+                <p>Een dagkaartje voor het park kost €1500, mocht je in een rolstoel zitten dan heb je pech, wij hebben geen ondersteuning voor minder validen.</p>
             </article>
             </div>
             <div class="row">
@@ -40,7 +40,7 @@
             </div>
             <article class="emphasize">
                 <h2>Koop nu je tickets</h2>
-                <p>Koop hier je tickets, klik op de knop hieronder om je ticket te bestellen.</p>
+                <p>Koop hier je tickets, klik op de link hieronder om naar de pagina te gaan waar je je tickets kan bestellen.</p>
                 <p>
                     <button>Bestel nu de tickets (&euro; 1500)</button>
                 </p>
